Added GET /checks/{:id} endpoint.
